# Market-research

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
core/auth/: middleware.ts
core/orchestrator/: dispatch.ts  dispatch_batch.ts
core/server/: index.ts  routes.ts
dashboards/components/: ApprovalSidebar.tsx
dashboards/lib/: api.ts
marketing-ops-intelligence/: CLAUDE.md  package.json
marketing-ops-intelligence/.claude/agents/: approval_manager_agent.md  client_resolver_agent.md  dashboard_aggregator_agent.md  memory_retrieval_agent.md  memory_update_agent.md  multi_market_allocator_agent.md  orchestrator.md  performance_agent.md  reporting_agent.md
marketing-ops-intelligence/config/: models.json
marketing-ops-intelligence/core/auth/: jwt.ts
marketing-ops-intelligence/core/db/: client.ts  queries.ts
marketing-ops-intelligence/core/memory/: semantic_retrieve.ts
marketing-ops-intelligence/core/orchestrator/: pipeline.ts
marketing-ops-intelligence/core/schemas/: index.ts  market.ts  plan.ts
marketing-ops-intelligence/core/whatsapp/: send.ts
marketing-ops-intelligence/dashboards/: tsconfig.json
marketing-ops-intelligence/dashboards/app/: layout.tsx
marketing-ops-intelligence/dashboards/lib/: api.ts
marketing-ops-intelligence/docs/: architecture.md
marketing-ops-intelligence/tests/playwright/: playwright.config.ts  (+1 more)
src/market_research_crew/: __init__.py  crew.py  export.py  flow.py  main.py  routing.py  schemas.py
tests/: test_export.py  test_imports.py  test_input_schema.py  test_output_schema.py  test_routing.py
(+5 files in other folders)
